--- a/风云际会.md
+++ b/风云际会.md
@@ -126,6 +126,7 @@ tick = () => {
                     const ry = xz2Height(halfX, deathZ);
                     const safeX = Math.max(stx + P, halfX);
                     api.setPosition(id, [safeX, ry + 2, deathZ]);
+                    api.removeItemName(id, "Diamond", 1);
                 }
                 else {
                     api.setPosition(id, [stx + 0.5, sty + 2, stz + P / 2 + 0.5]);
@@ -317,3 +318,139 @@ onPlayerChat = (playerId, chatMessage) => {
     }
 };
 ```
+-----
+## 代码解释
+
+> 由Deepseek生成
+
+这是一个**无限楼梯游戏模式**的完整实现代码。让我详细解释它的功能和机制：
+
+### 🎮 核心游戏概念
+
+这是一个**无限延伸的楼梯平台游戏**，玩家需要不断前进，同时避免从消失的方块上掉落。
+
+### 技术架构
+
+#### 1. **楼梯生成系统**
+```javascript
+const W = 10, P = 5; // 楼梯宽度10格，每阶长度5格
+const stx = 1000, sty = 0, stz = 1000; // 起始坐标
+var L = 1000; // 楼梯总长度（动态扩展）
+
+function xz2Height(x, z) {
+    // 根据x,z坐标计算台阶高度
+    return Math.floor((x - stx) / P)+1;
+}
+```
+
+#### 2. **方块消失机制**
+```javascript
+var changingBlocks = []; // 跟踪变色中的方块
+const ticks2Disappear = 40; // 40tick后消失
+```
+**变色流程**：
+- 正常方块（浅蓝）→ 黄色 → 红色 → 消失
+- 给玩家2秒反应时间逃离危险方块
+
+### 游戏核心循环
+
+#### `tick()` 函数 - 每秒20次执行
+
+##### **方块管理**：
+```javascript
+// 1. 随机选择10个正常方块开始变色
+// 2. 更新所有变色方块的状态
+// 3. 随机再生10个空气方块
+```
+
+##### **玩家排名系统**：
+```javascript
+if (T % 20 === 0) { // 每秒更新一次排名
+    rank = [];
+    // 收集所有玩家位置，按高度排序
+    rank.sort((a, b) => b.height - a.height);
+    // 在右侧信息栏显示实时排名
+}
+```
+
+### 奖励物品系统
+
+#### **两种游戏模式**：
+- **Original模式**：纯技术玩法，无奖励
+- **Extra模式**：享受奖励系统
+
+#### **奖励物品功能**：
+
+| 物品 | 获取条件 | 功能 | 寓意 |
+|------|----------|------|------|
+| Moonstone | 排名第一 | 死亡位置重生 | 阶级固化 |
+| Diamond | 排名第二 | 死亡位置一半高度重生 | 有限上升机会 |
+| Iron Bar | 中间名次 | 随机传送 | 中产阶级流动 |
+| Coal | 随机获得 | 50%死亡/50%双倍高度 | 高风险赌博 |
+
+### 玩家命令系统
+
+#### **模式切换**：
+```javascript
+#mode original / #o  // 切换到无奖励模式
+#mode extra / #x     // 切换到奖励模式
+```
+
+#### **物品使用**：
+```javascript
+#use coal / #c       // 使用Coal - 命运赌博
+#use ironbar / #ib   // 使用Iron Bar - 随机传送
+```
+
+#### **信息查询**：
+```javascript
+#view players        // 查看所有玩家模式
+#help awards         // 奖励机制说明
+#help / #h          // 完整命令列表
+```
+
+### 关键技术特性
+
+#### 1. **动态世界扩展**
+```javascript
+L = Math.max(L, rank[0]?.height*P + 100 || 300);
+```
+楼梯根据最高玩家位置自动延长，确保无限游戏体验。
+
+#### 2. **掉落保护机制**
+```javascript
+if (y <= 1) { // 玩家掉落到地面
+    // 检查是否有复活物品
+    // 否则传送回起点
+}
+```
+
+#### 3. **奖励发放逻辑**
+```javascript
+if (T % 1000 === 0) { // 每50秒发放一次奖励
+    // 根据实时排名向Extra玩家发放对应奖励
+}
+```
+
+### 用户体验设计
+
+#### **视觉系统**：
+- **彩色消息**：不同功能使用不同颜色
+- **星际天空盒**：营造无限空间感
+- **实时排名**：右侧信息栏持续更新
+
+#### **多语言支持**：
+```javascript
+api.sendMessage(playerId, "中文说明...", { color: grass})
+api.sendMessage(playerId, "English explanation...", { color: mint})
+```
+
+## 🌟 设计哲学
+
+这个游戏体现了**社会阶级的隐喻**：
+- **Moonstone**：上层阶级的特权继承
+- **Diamond**：有限的上升通道  
+- **Coal**：底层的风险决策甚至赌博
+- **无限竞争**：反映现实社会的持续竞争
+
+这是一个设计精巧的平台游戏，结合了技术挑战、资源管理和深刻的社会隐喻，为玩家提供了丰富的游戏体验。
